# sae

./: .gitignore  output.txt  pyproject.toml  requirements-lock.txt  submission.sh
analysis/: basic.ipynb
dictionary_learning/: data.py  hooks.py  loader.py  log.py  losses.py  metrics.py  plotting.py  types.py  utils.py
dictionary_learning/models/: mlp.py  transformers.py
dictionary_learning/scripts/analysis/: activation_analysis.py  geometric_analysis.py  pca_dir0_explore.py  plot_performance.py  resample_direction.py
dictionary_learning/scripts/train_mlp_saes/: max_act_data_mnist.py  train_mnist_saes.py
dictionary_learning/scripts/train_mnist/: run_train_mnist.py
dictionary_learning/scripts/train_tlens/: run_train_tlens.py  tiny_gpt2.yaml
dictionary_learning/scripts/train_tlens/sample_models/tiny-gpt2_lr-0.001_bs-16_2024-04-21_14-01-14/: final_config.yaml
dictionary_learning/scripts/train_tlens_saes/: gpt2_local.yaml  gpt2_local_sweep.yaml  run_sweep.py  run_sweep_mp.py  run_train_tlens_saes.py  tinystories_1M_local_sweep.yaml
dictionary_learning/scripts/train_tlens_saes/run_configs/: gpt2_e2e.yaml  gpt2_e2e_recon.yaml  gpt2_local.yaml
dictionary_learning/scripts/train_tlens_saes/sweep_configs/: gpt2_e2e_recon_sweep.yaml  gpt2_e2e_sweep.yaml  tinystories_1M_e2e_sweep.yaml
e2e_sae/scripts/train_tlens_saes/: gpt2_local.yaml
tests/: test_mlp.py  test_sae.py  test_train_tlens_saes.py  test_transformer.py  test_utils.py  utils.py
